scrollbar bug on desktop sizes fixed

--- a/beta/css/main.css
+++ b/beta/css/main.css
@@ -270,6 +270,12 @@ footer h4 {
   overflow-y: visible;
 }
 
+@media only screen and (min-width: 720px) {
+  #project-container {
+    overflow-x: visible;
+  }
+}
+
 #projects {
   margin-bottom: 5vh;
   width: 268vw;
